--- a/src/modules/start/meson.build
+++ b/src/modules/start/meson.build
@@ -3,18 +3,4 @@ start_src = [
 	'start.c',
 ]
 
-start_dir = join_paths(dir_module_e, 'start', module_arch)
-if get_option('start') == true
-	config_h.set('USE_MODULE_START', '1')
-
-        module_files += join_paths(start_dir, 'start.so')
-	shared_module('start',
-                start_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: start_dir,
-                install: true
-        )
-endif
-
+module += [start_src, 'e-module-start.edj']
