--- a/src/modules/tiling/meson.build
+++ b/src/modules/tiling/meson.build
@@ -6,20 +6,4 @@ tiling_src = [
 	'window_tree.h',
 ]
 
-tiling_mod_dir = join_paths(dir_module_e, 'tiling')
-tiling_dir = join_paths(tiling_mod_dir, module_arch)
-if get_option('tiling') == true
-	config_h.set('USE_MODULE_TILING', '1')
-
-        module_files += join_paths(tiling_dir, 'tiling.so')
-	shared_module('tiling',
-                tiling_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: tiling_dir,
-                install: true
-        )
-endif
-
-install_data('e-module-tiling.edj', install_dir: tiling_mod_dir, install : true)
+module += [tiling_src, 'e-module-tiling.edj']
