--- a/src/modules/winlist/meson.build
+++ b/src/modules/winlist/meson.build
@@ -6,18 +6,4 @@ winlist_src = [
 	'e_winlist.h',
 ]
 
-winlist_dir = join_paths(dir_module_e, 'winlist', module_arch)
-if get_option('winlist') == true
-	config_h.set('USE_MODULE_WINLIST', '1')
-
-        module_files += join_paths(winlist_dir, 'winlist.so')
-	shared_module('winlist',
-                winlist_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: winlist_dir,
-                install: true
-        )
-endif
-
+module += [winlist_src, 'e-module-winlist.edj']
