--- a/src/modules/conf_theme/meson.build
+++ b/src/modules/conf_theme/meson.build
@@ -1,7 +1,3 @@
-conf_theme_dist = [
-	'module.desktop',
-]
-
 conf_theme_src = [
 	'e_int_config_borders.c',
 	'e_int_config_color_classes.c',
@@ -16,22 +12,4 @@ conf_theme_src = [
 	'e_mod_main.h',
 ]
 
-conf_theme_dir = join_paths(dir_module_e, 'conf_theme', module_arch)
-if get_option('conf-theme') == true
-	config_h.set('USE_MODULE_CONF_THEME', '1')
-
-	install_data(conf_theme_dist,
-		install_dir: join_paths(dir_module_e, 'conf_theme')
-	)
-
-        module_files += join_paths(conf_theme_dir, 'conf_theme.so')
-	shared_module('conf_theme',
-                conf_theme_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: conf_theme_dir,
-                install: true
-        )
-endif
-
+module += [conf_theme_src]
