--- a/src/modules/connman/meson.build
+++ b/src/modules/connman/meson.build
@@ -1,8 +1,3 @@
-connman_dist = [
-	'e-module-connman.edj',
-	'module.desktop',
-]
-
 connman_src = [
 	'agent.c',
 	'e_connman.c',
@@ -12,22 +7,4 @@ connman_src = [
 	'e_mod_main.h',
 ]
 
-connman_dir = join_paths(dir_module_e, 'connman', module_arch)
-if get_option('connman') == true
-	config_h.set('USE_MODULE_CONNMAN', '1')
-
-	install_data(connman_dist,
-		install_dir: join_paths(dir_module_e, 'connman')
-	)
-
-        module_files += join_paths(connman_dir, 'connman.so')
-	shared_module('connman',
-                connman_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: connman_dir,
-                install: true
-        )
-endif
-
+module += [connman_src, 'e-module-connman.edj']
