--- a/src/modules/fileman/meson.build
+++ b/src/modules/fileman/meson.build
@@ -1,8 +1,3 @@
-fileman_dist = [
-	'e-module-fileman.edj',
-	'module.desktop',
-]
-
 fileman_src = [
 	'e_fwin.c',
 	'e_fwin_nav.c',
@@ -15,22 +10,4 @@ fileman_src = [
 	'e_mod_main.h',
 ]
 
-fileman_dir = join_paths(dir_module_e, 'fileman', module_arch)
-if get_option('fileman') == true
-	config_h.set('USE_MODULE_FILEMAN', '1')
-
-	install_data(fileman_dist,
-		install_dir: join_paths(dir_module_e, 'fileman')
-	)
-
-        module_files += join_paths(fileman_dir, 'fileman.so')
-	shared_module('fileman',
-                fileman_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: fileman_dir,
-                install: true
-        )
-endif
-
+module += [fileman_src, 'e-module-fileman.edj']
