--- a/src/modules/packagekit/meson.build
+++ b/src/modules/packagekit/meson.build
@@ -7,18 +7,4 @@ packagekit_src = [
 	'e_mod_packagekit.h',
 ]
 
-packagekit_dir = join_paths(dir_module_e, 'packagekit', module_arch)
-if get_option('packagekit') == true
-	config_h.set('USE_MODULE_PACKAGEKIT', '1')
-
-        module_files += join_paths(packagekit_dir, 'packagekit.so')
-	shared_module('packagekit',
-                packagekit_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: packagekit_dir,
-                install: true
-        )
-endif
-
+module += [packagekit_src, 'e-module-packagekit.edj']
