--- a/src/modules/quickaccess/meson.build
+++ b/src/modules/quickaccess/meson.build
@@ -7,18 +7,4 @@ quickaccess_src = [
 	'e_mod_main.h',
 ]
 
-quickaccess_dir = join_paths(dir_module_e, 'quickaccess', module_arch)
-if get_option('quickaccess') == true
-	config_h.set('USE_MODULE_QUICKACCESS', '1')
-
-        module_files += join_paths(quickaccess_dir, 'quickaccess.so')
-	shared_module('quickaccess',
-                quickaccess_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: quickaccess_dir,
-                install: true
-        )
-endif
-
+module += [quickaccess_src, 'e-module-quickaccess.edj']
