--- a/src/modules/temperature/meson.build
+++ b/src/modules/temperature/meson.build
@@ -6,18 +6,4 @@ temperature_src = [
 	'e_mod_main.h',
 ]
 
-temperature_dir = join_paths(dir_module_e, 'temperature', module_arch)
-if get_option('temperature') == true
-	config_h.set('USE_MODULE_TEMPERATURE', '1')
-
-        module_files += join_paths(temperature_dir, 'temperature.so')
-	shared_module('temperature',
-                temperature_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: temperature_dir,
-                install: true
-        )
-endif
-
+module += [temperature_src, 'e-module-temperature.edj']
