e build - make 2 modules (music contrl and pager plain) consistent
icon name was not consistent with other patterns, so fix that so we
dont have exceptions.

--- a/src/modules/pager_plain/meson.build
+++ b/src/modules/pager_plain/meson.build
@@ -9,8 +9,7 @@ src = [
 ]
 
 icon = [
-## XXX: bad pttern with module icon name
-  'e-module-' + opt + '.edj',
+  'e-module-' + module + '.edj',
   'module.desktop'
 ]
 
