meson - clock and ibar - use same template as most modules now

--- a/src/modules/clock/meson.build
+++ b/src/modules/clock/meson.build
@@ -1,29 +1,32 @@
-clock_dist = [
-	'e-module-clock.edj',
-	'module.desktop',
+module = 'clock'
+opt    = 'clock'
+conf   = 'USE_MODULE_CLOCK'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_config.c',
+  'e_mod_main.h'
 ]
 
-clock_src = [
-	'e_mod_config.c',
-	'e_mod_main.c'
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
 ]
 
-clock_dir = join_paths(dir_module_e, 'clock', module_arch)
-if get_option('clock') == true
-	config_h.set('USE_MODULE_CLOCK', '1')
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
 
-	install_data(clock_dist,
-		install_dir: join_paths(dir_module_e, 'clock')
-	)
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
 
-        module_files += join_paths(clock_dir, 'clock.so')
-	shared_module('clock',
-                clock_src,
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: clock_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
