e module build - make build files far more generic and far smaller
now mdoule build files that fllow one pattern (the most common by far)
all JUSt list their souce files and nothing else. this really cuts
down on build size/complexity.

there are other patterns too (no icons at all) that i'll do next, then
we're down into "weird" land where i'll have to think of some more
interesting ways to deal with this.

--- a/src/modules/appmenu/meson.build
+++ b/src/modules/appmenu/meson.build
@@ -1,31 +1,6 @@
-appmenu_dist = [
-	'e-module-appmenu.edj',
-	'module.desktop',
+src = [
+  'e_mod_main.c',
+  'e_mod_appmenu_render.c',
+  'e_mod_dbus_registrar_server.c',
+  'e_mod_appmenu_private.h'
 ]
-
-appmenu_src = [
-	'e_mod_main.c',
-        'e_mod_appmenu_render.c',
-        'e_mod_dbus_registrar_server.c',
-        'e_mod_appmenu_private.h'
-]
-
-appmenu_dir = join_paths(dir_module_e, 'appmenu', module_arch)
-if get_option('appmenu') == true
-	config_h.set('USE_MODULE_APPMENU', '1')
-
-	install_data(appmenu_dist,
-		install_dir: join_paths(dir_module_e, 'appmenu')
-	)
-
-        module_files += join_paths(appmenu_dir, 'appmenu.so')
-	shared_module('appmenu',
-                appmenu_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: appmenu_dir,
-                install: true
-        )
-endif
-
