--- a/src/modules/meson.build
+++ b/src/modules/meson.build
@@ -1,6 +1,41 @@
 mods = [
   'clock',
-  'ibar'
+  'ibar',
+  'pager',
+  'pager_plain',
+  'notification',
+  'ibox',
+  'start',
+  'winlist',
+  'fileman',
+  'fileman_opinfo',
+  'conf',
+  'msgbus',
+  'conf_applications',
+  'conf_shelves',
+  'conf_window_remembers',
+  'conf_menus',
+  'conf_dialogs',
+  'conf_performance',
+  'conf_paths',
+  'conf_interaction',
+  'gadman',
+  'connman',
+  'bluez4',
+  'syscon',
+  'systray',
+  'appmenu',
+  'quickaccess',
+  'shot',
+  'backlight',
+  'tasks',
+  'conf_randr',
+  'xkbswitch',
+  'tiling',
+  'packagekit',
+  'wireless',
+  'time',
+  'luncher'
 ]
 
 foreach m: mods
