implement support for wl aux hints
this is a direct copy of a feature from tizen git with no modifications other
than what was required for compilation and functionality

https://git.tizen.org/cgit/platform/upstream/enlightenment/commit/?id=8ea090222cee86b57e54f1444c5b63252380fba5
https://git.tizen.org/cgit/platform/upstream/enlightenment/commit/?id=2c5593325c3f32efa92da3c371a780e434a30efd

fix T5780

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -395,6 +395,7 @@ if config_h.has('HAVE_WAYLAND') == true
 		'e_comp_wl_dmabuf.c',
 		'e_comp_wl.c',
 		'e_comp_wl_extensions.c',
+		'e_comp_wl_extensions_tizen.c',
 		wayland_proto_c,
 		wayland_proto_h
 	]
