meson: use file instead of doing the relative path by hand
a reason for doing that is that you can just pack together targets into
a array and pass them to our helper, and the helper will just handle
them, so even module with eldbus codegen etc is now supported.

This also means that we are just passing the src object directly into
the shared_module call, which means the user of our helper can just pack
everything he needs into the src var and the helper does not need to
know about it.

--- a/src/modules/appmenu/meson.build
+++ b/src/modules/appmenu/meson.build
@@ -1,6 +1,6 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_appmenu_render.c',
   'e_mod_dbus_registrar_server.c',
   'e_mod_appmenu_private.h'
-]
+ )
