--- a/src/modules/conf_intl/meson.build
+++ b/src/modules/conf_intl/meson.build
@@ -1,9 +1,9 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_imc.c',
   'e_int_config_imc_import.c',
   'e_int_config_intl.c',
   'e_mod_main.h'
-]
+ )
 
 desktop_only = true
