--- a/src/modules/conf_performance/meson.build
+++ b/src/modules/conf_performance/meson.build
@@ -1,6 +1,6 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_performance.c',
   'e_int_config_powermanagement.c',
   'e_mod_main.h'
-]
+ )
