--- a/src/modules/conf_window_manipulation/meson.build
+++ b/src/modules/conf_window_manipulation/meson.build
@@ -1,4 +1,4 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_clientlist.c',
   'e_int_config_focus.c',
@@ -6,4 +6,4 @@ src = [
   'e_int_config_window_geometry.c',
   'e_int_config_window_process.c',
   'e_mod_main.h'
-]
+ )
