--- a/src/modules/connman/meson.build
+++ b/src/modules/connman/meson.build
@@ -1,8 +1,8 @@
-src = [
+src = files(
   'e_mod_main.c',
   'agent.c',
   'e_connman.c',
   'e_mod_config.c',
   'E_Connman.h',
   'e_mod_main.h'
-]
+)
