--- a/src/modules/packagekit/meson.build
+++ b/src/modules/packagekit/meson.build
@@ -1,8 +1,8 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_config.c',
   'e_mod_packagekit.c',
   'e_mod_config.h',
   'e_mod_main.h',
   'e_mod_packagekit.h'
-]
+ )
