--- a/src/modules/pager/meson.build
+++ b/src/modules/pager/meson.build
@@ -1,4 +1,4 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_config.c',
   'e_mod_main.h',
@@ -6,4 +6,4 @@ src = [
   'gadget/pager.h',
   'gadget/pager.c',
   'gadget/config.c'
-]
+)
