--- a/src/modules/quickaccess/meson.build
+++ b/src/modules/quickaccess/meson.build
@@ -1,8 +1,8 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_config.c',
   'e_mod_quickaccess.c',
   'e_quickaccess_bindings.c',
   'e_quickaccess_db.c',
   'e_mod_main.h'
-]
+ )
