--- a/src/modules/systray/meson.build
+++ b/src/modules/systray/meson.build
@@ -1,8 +1,8 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_notifier_host.c',
   'e_mod_notifier_host_dbus.c',
   'e_mod_notifier_watcher.c',
   'e_mod_main.h',
   'e_mod_notifier_host_private.h'
-]
+ )
