--- a/src/modules/teamwork/meson.build
+++ b/src/modules/teamwork/meson.build
@@ -2,12 +2,12 @@ module = 'teamwork'
 opt    = 'teamwork'
 conf   = 'USE_MODULE_TEAMWORK'
 
-src = [
+src = files(
   'e_mod_main.c',
   'e_mod_config.c',
   'e_mod_tw.c',
   'e_mod_main.h'
-]
+ )
 
 if config_h.has('HAVE_WAYLAND') == true
   src += [
