--- a/src/modules/conf_applications/meson.build
+++ b/src/modules/conf_applications/meson.build
@@ -1,8 +1,8 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_apps.c',
   'e_int_config_apps_personal.c',
   'e_int_config_defapps.c',
   'e_int_config_deskenv.c',
   'e_mod_main.h'
-]
+)
