--- a/src/modules/conf_bindings/meson.build
+++ b/src/modules/conf_bindings/meson.build
@@ -1,4 +1,4 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_acpibindings.c',
   'e_int_config_edgebindings.c',
@@ -6,6 +6,6 @@ src = [
   'e_int_config_mousebindings.c',
   'e_int_config_signalbindings.c',
   'e_mod_main.h'
-]
+)
 
 desktop_only = true
