--- a/src/modules/syscon/meson.build
+++ b/src/modules/syscon/meson.build
@@ -1,7 +1,7 @@
-src = [
+src = files(
   'e_mod_main.c',
   'e_int_config_syscon.c',
   'e_syscon.c',
   'e_syscon_gadget.c',
   'e_mod_main.h'
-]
+ )
